Fix dropdowns and spacing in dragon drop

--- a/client/styles/_author/partials/_drag-and-drop.scss
+++ b/client/styles/_author/partials/_drag-and-drop.scss
@@ -108,6 +108,10 @@
   &.au-o-row{
     margin-left: -2rem;
     @include align-items(stretch);
+
+    .au-o-quarter{
+      margin-bottom: 2rem;
+    }
   }
 }
 
